tests/snapshots/integration__wrap_help__wrap.snap
---
source: tests/wrap_help.rs
expression: data
---
RUN
prog -h

OUTPUT
command cat >&2 <<-'EOF' 
A simple cli

Extra lines after the @cmd or @describe, which don't start with an @, are
treated as the long description. A line which is not a comment ends
the block.

USAGE: prog [OPTIONS] [TARGET] <COMMAND>

ARGS:
  [TARGET]  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
            eiusmod tempor incididunt ut labore et dolore magna aliqua. Sed
            viverra tellus in hac habitasse platea.
            Use '-' for standard input.

OPTIONS:
      --foo <FOO>  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                   sed do eiusmod tempor incididunt ut labore et dolore magna
                   aliqua. Neque laoreet suspendisse libero id.
                    * default: enables recommended style components (default).
                    * full: enables all available components.
                    * auto: same as 'default', unless the output is piped.
  -h, --help       Print help

COMMANDS:
  foo  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Arcu cursus euismod
       quis viverra.

EOF
exit 0

